--- a/app/src/main/res/layout/weather_layout.xml
+++ b/app/src/main/res/layout/weather_layout.xml
@@ -9,7 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#484E61">
-
+        <Button
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/switch_city"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/home"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -17,6 +23,14 @@
             android:layout_centerInParent="true"
             android:textColor="#fff"
             android:textSize="24sp" />
+        <Button
+            android:id="@+id/refresh_weather"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/refresh"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -29,11 +43,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/publish_text"
-            android:layout_centerInParent="true"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:textColor="#FFF"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true" />
 
         <LinearLayout
             android:id="@+id/weather_info_layout"
@@ -61,7 +76,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_gravity="center_horizontal">
 
